--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,6 @@ lz4
 vulners
 ipaddresses
 subprocess32
-blinker-1.5.dev0
+blinker
 xdot
 https://github.com/Chinmay1743/halberd/archive/refs/heads/master.zip
